# cr8s

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2023-04-01-112728_create_rustaceans/: up.sql
migrations/2023-04-01-112734_create_crates/: up.sql
migrations/2023-04-05-080124_create_users/: up.sql
migrations/2023-04-05-080129_create_roles/: up.sql
migrations/2023-04-05-080144_create_users_roles/: up.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
