[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0" }
log = { version = "0.4" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }

