[package]
default-run = "server"
edition = "2021"
name = "cr8s"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.1.6"}
diesel = {version = "1.4", features = ["postgres", "chrono"]}
log = {version = "0.4"}
rocket = {version = "0.5.0-rc", features = ["json"]}
rocket_sync_db_pools = {version = "0.1.0-rc.2", features = ["diesel_postgres_pool"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

[dev-dependencies]
reqwest = {version = "0.11", features = ["json", "blocking"]}
